# Virtual-Pet

./: .gitignore  Prompt  README.md  demo_run.py  pet_save.json  pyproject.toml  run_tests.py
src/virtual_pet/: __init__.py  cli.py  pet.py
tests/: conftest.py  test_cli_art.py  test_pet.py
