[project]
name = "virtual-pet"
version = "0.1.0"
description = "Small terminal-based Virtual Pet with simple line animations using Rich"
authors = ["You <you@example.com>"]

[project.dependencies]
python = ">=3.10"
rich = "^13.0.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
